--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+
+### From: AndresFDaza
+
+#Vs version (?)
+
+.vs/*
+/.vs
+/.vs
+*.vs
+*/vs
+*/.vs
+
+/x64
+/x64*
+/repoEstructurasC++/x64*
+
+
 ################## From .gitignore repository
 # Prerequisites
 *.d
