--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,16 @@
 
 #Vs version (?)
 
-.vs/*
-/.vs
-/.vs
-*.vs
-*/vs
-*/.vs
+#.vs/*
+#/.vs
+#/.vs
+#*.vs
+#*/vs
+#*/.vs
 
-/x64
-/x64*
-/repoEstructurasC++/x64*
+#/x64
+#/x64*
+#/repoEstructurasC++/x64*
 
 
 ################## From .gitignore repository
